# lambda_ethereum_consensus

./: .all-contributorsrc  .credo.exs  .dockerignore  .fork_version  .formatter.exs  .gitignore  .iex.exs  .recode.exs  .spectest_version  .spellcheck.yml  .tool-versions  CONTRIBUTING.md  Dockerfile  Makefile  README.md  assertoor-config.yml  assertoor-test.yml  consensus-test.yaml  deposit_tree_file  electra-gap.md  flake.nix  go.work  go.work.sum  keymanager-oapi.yaml  log.txt  mix.exs  network_params.yaml  test.txt  test2.txt  test3.txt  test4.txt  test5.txt  text.txt  validator.keys
.github/: .wordlist.txt  CODEOWNERS  dependabot.yml  pull_request_template.md
bench/: block_processing.exs  bls.exs  byte_reversal.exs  deposit_tree.exs  multiple_blocks_processing.exs  process_attestation.exs  shuffling_bench.ex  ssz.exs  ssz_ex_bench.exs
config/: config.exs  runtime.exs
docs/: PREREQUISITES.md  TESTING.md  architecture.md  bindings_go.md  bitfields.md  bitvectors.md  clients.md  concurrency_design.md  snappy.md  (+3 more)
native/bls_nif/: Cargo.toml  README.md
native/bls_nif/src/: lib.rs
native/kzg_nif/: Cargo.toml
native/kzg_nif/src/: lib.rs
native/ssz_nif/: Cargo.toml  README.md
native/ssz_nif/src/: lh_types.rs  lib.rs  utils.rs
native/ssz_nif/src/elx_types/: beacon_chain.rs  mod.rs  p2p.rs  validator.rs
native/ssz_nif/src/rs_types/: mod.rs
native/ssz_nif/src/ssz_types/: beacon_chain.rs  config.rs  mod.rs  p2p.rs  validator.rs
native/ssz_nif/src/types/: beacon_chain.rs  checkpoint.rs  mod.rs
native/ssz_nif/src/utils/: from_elx.rs  from_lh.rs  from_ssz.rs  helpers.rs  mod.rs
(+649 files in other folders)
